fixed header spacing across pages

--- a/client/main.scss
+++ b/client/main.scss
@@ -27,6 +27,10 @@ md-input-container {
   width: 100%;
 }
 
+.box h2 {
+  margin-top: 0;
+}
+
 .adminHeader {
   h2 { display: inline-block; }
   button { margin-left: 10px; }
